--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@
     color: var(--blue-2);
     background-color: var(--white);
     border-radius: 0.3em;
+    cursor: pointer;
   }
   #result h2 {
     color: var(--white);
@@ -93,7 +94,7 @@
     margin: 1.25em 0;
   }
   .weather,
-  .desc {
+  .humidity {
     color: var(--off-white);
     text-transform: uppercase;
     letter-spacing: 0.2em;
@@ -116,21 +117,21 @@
     font-weight: 400;
     color: var(--white);
   }
-  .temp-container {
+  .wind-container {
     display: flex;
     justify-content: center;
   }
-  .temp-container div {
+  .wind-container div {
     padding: 0.3em 1em;
   }
-  .temp-container div:first-child {
+  .wind-container div:first-child {
     border-right: 1px solid var(--transp-white-1);
   }
-  .temp-container .title {
+  .wind-container .title {
     font-weight: 600;
     color: var(--white);
   }
-  .temp-container .temp {
+  .wind-container .wind {
     font-weight: 300;
     color: var(--off-white);
   }
